add docker; some changes;
